--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 				<table align="center" class="table-600" cellpadding="0" cellspacing="0" width="600" bgcolor="#000000">
 					<tr>
 						<td align="center" style="padding-top: 30px; padding-bottom: 28px;">
-							<img src="http://r996639y.beget.tech/img/%D0%9B%D0%BE%D0%B3%D0%BE(6).png" width="187.6" class="logo" alt="">
+							<img src="https://github.com/aleksey-mos/Email__Html/blob/main/img/%D0%9B%D0%BE%D0%B3%D0%BE(6).png" width="187.6" class="logo" alt="">
 						</td>	
 					</tr>
 				</table>
