--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 		<tr>
 			<td align="center">
 				<table align="center" class="table-600" cellpadding="0" cellspacing="0" width="600">
-					<img src="http://r996639y.beget.tech/img/Rectangle%206.jpg" width="600" height="300" class="hero__img" alt="">
+					<img src="https://aleksey-mos.github.io/Email__Html/img/Rectangle%206.jpg" width="600" height="300" class="hero__img" alt="">
 				</table>
 			</td>
 		</tr>
@@ -153,7 +153,7 @@
 								</tr>
 								<tr>
 									<td align="center">
-										<img src="http://r996639y.beget.tech/img/Rectangle%20166.jpg" alt="">
+										<img src="https://aleksey-mos.github.io/Email__Html/img/Rectangle%20166.jpg" alt="">
 									</td>
 								</tr>
 								<tr>
@@ -172,7 +172,7 @@
 								</tr>
 								<tr>
 									<td align="center">
-										<img src="http://r996639y.beget.tech/img/Rectangle%20166(1).jpg" alt="">
+										<img src="https://aleksey-mos.github.io/Email__Html/img/Rectangle%20166(1).jpg" alt="">
 									</td>
 								</tr>
 								<tr>
@@ -191,7 +191,7 @@
 								</tr>
 								<tr>
 									<td align="center">
-										<img src="http://r996639y.beget.tech/img/Rectangle%20166(2).jpg" alt="">
+										<img src="https://aleksey-mos.github.io/Email__Html/img/Rectangle%20166(2).jpg" alt="">
 									</td>
 								</tr>
 								<tr>
@@ -210,7 +210,7 @@
 								</tr>
 								<tr>
 									<td align="center">
-										<img src="http://r996639y.beget.tech/img/Rectangle%20166(3).jpg" alt="">
+										<img src="https://aleksey-mos.github.io/Email__Html/img/Rectangle%20166(3).jpg" alt="">
 									</td>
 								</tr>
 								<tr>
@@ -229,7 +229,7 @@
 								</tr>
 								<tr>
 									<td align="center">
-										<img src="http://r996639y.beget.tech/img/Rectangle%20166(4).jpg" alt="">
+										<img src="https://aleksey-mos.github.io/Email__Html/img/Rectangle%20166(4).jpg" alt="">
 									</td>
 								</tr>
 								<tr>
@@ -270,19 +270,19 @@
 										<table width="489" class="table-489" cellpadding="0" cellspacing="0">
 											<tr>
 												<td align="left" width="140" class="table-489 mobile-botton">
-													<img src="http://r996639y.beget.tech/img/check-square.png" alt="">
+													<img src="https://aleksey-mos.github.io/Email__Html/img/check-square.png" alt="">
 													<p style="font-family: 'Open Sans', arial, sans-serif; margin-top: 14px; height: 67px; margin-bottom: 0; font-size: 12px; line-height: 18px; color: #515151;">
 														Уникальные подборки <br /> работ с авторскими <br /> рецензиями
 													</p>
 												</td>
 												<td align="left" width="157" class="table-489 mobile-botton">
-													<img src="http://r996639y.beget.tech/img/calendar.png" alt="">
+													<img src="https://aleksey-mos.github.io/Email__Html/img/calendar.png" alt="">
 													<p style="font-family: 'Open Sans', arial, sans-serif; margin-bottom: 0; margin-top: 14px; height: 67px; font-size: 12px; line-height: 18px; color: #515151;">
 														Возможность настроить <br /> нашу рассылку под свой <br /> личный вкус
 													</p>
 												</td>
 												<td align="left" width="138"  class="table-489 mobile-botton">
-													<img src="http://r996639y.beget.tech/img/arrow-up-circle.png" alt="">
+													<img src="https://aleksey-mos.github.io/Email__Html/img/arrow-up-circle.png" alt="">
 													<p style="font-family: 'Open Sans', arial, sans-serif; margin-bottom: 0; margin-top: 14px; height: 66px; font-size: 12px; line-height: 18px; color: #515151;">
 														У вас есть пожелания и <br /> предложения? <br />
 														Напишите нам в ответ <br /> на это письмо!
@@ -320,17 +320,17 @@
 								<tr>
 									<td align="left" style="margin-top: 27.5px;">
 										<a href="#">
-											<img src="http://r996639y.beget.tech/img/vk.png" alt="">
+											<img src="https://aleksey-mos.github.io/Email__Html/img/vk.png" alt="">
 										</a>
 									</td>
 									<td align="center" style="margin-top: 27.5px;">
 										<a href="#">
-											<img src="http://r996639y.beget.tech/img/instagram(1).png" alt="">
+											<img src="https://aleksey-mos.github.io/Email__Html/img/instagram(1).png" alt="">
 										</a>
 									</td>
 									<td align="right" style="margin-top: 27.5px;">
 										<a href="#">
-											<img src="http://r996639y.beget.tech/img/fb.png" alt="">
+											<img src="https://aleksey-mos.github.io/Email__Html/img/fb.png" alt="">
 										</a>
 									</td>
 								</tr>
